linked login and todo files

--- a/index.html
+++ b/index.html
@@ -3,36 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
+
     <title>destress</title>
-    <link rel="stylesheet" href="style_3.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-     <nav>
-        All Is Well
+     <div class="nav">
+        <div>All Is Well</div>
         <a href="#">Sign Up</a>
-        <a href="#">Sign In</a>
+        <a href="login.html">Sign In</a>
         <a href="#">Settings</a>
-     <nav>
+     </div>
     </header>
     <div class="container">
         What is your issue ?
         <div class="issues">
             <div class="cards">
-                <div class="card1">Anxiety</div>
-                <div class="card2">panic Attacks</div>
+                <div class="card1">
+                    <img src="anxiety .jpg">
+                    Anxiety
+                </div>
+                <div class="card2">
+                    <div class="img"> 
+                        <img src="depression2.jpg">
+                    </div>
+                    panic Attacks
+                </div>
                 <div class="card3">depression</div>
             </div>
         </div>
-        <a href="#" class="todo">create to-do list here</a>
+        <a href="todo.html" class="todo">create to-do list here</a>
     </div>
 =======
     <title>Document</title>
 </head>
 <body>
-    hello
->>>>>>> b76656dbad115065066909dac5d4fc2b09ac7a27
+   
 </body>
 </html>
